# diagnostics

./: CONTRIBUTORS  LICENSE  README.md
connect/: Cargo.toml  release.toml
connect/src/: lib.rs
connect/src/receive/: connect.rs  mod.rs  replaywithshutdown.rs
tdiag/: .gitignore  Cargo.toml  release.toml
tdiag/src/: lib.rs  main.rs
tdiag/src/commands/: arrangements.rs  graph.rs  mod.rs  profile.rs
tdiag/src/commands/graph/: dataflow-graph.html
