[package]
name = "tdiag-connect"
version = "0.2.0"
authors = ["Andrea Lattuada <andrea@lattuada.me>"]
homepage = "https://github.com/TimelyDataflow/diagnostics"
repository = "https://github.com/TimelyDataflow/diagnostics.git"
description = "Helpers to obtain traces suitable for diagnostics from timely / differential."
license = "MIT"

edition = "2018"

[dependencies]
timely = "^0.10"
