[package]
name = "tdiag"
version = "0.2.0"
authors = ["Andrea Lattuada <andrea@lattuada.me>"]
homepage = "https://github.com/TimelyDataflow/diagnostics"
repository = "https://github.com/TimelyDataflow/diagnostics.git"
description = "Tools to inspect a timely-dataflow computation"
license = "MIT"

edition = "2018"

[dependencies]
timely = "^0.10"
differential-dataflow = "^0.10"
clap = "^2.33"
tdiag-connect = "^0.2"
